# Volumemixer_PC

./: .gitignore  CMakeLists.txt  README.md  volumemixer.sln
MixerClient/: CMakeLists.txt  communication.cpp  communication.h
MixerClient/main_app/: CMakeLists.txt
MixerClient/main_app/include/: client.h
MixerClient/main_app/src/: client.cpp  communication.cpp  communication.h
MixerClient/service/: CMakeLists.txt  main.cpp
MixerClient/standalone/: CMakeLists.txt  main.cpp
MixerClient/windowless/: CMakeLists.txt  main.cpp
SerialPortWrapper/: CMakeLists.txt
VolumeAPI/: CMakeLists.txt
VolumeAPI/include/VolumeAPI/: VolumeAPI.h
VolumeAPI/src/: VolumeAPI.cpp  process_api.cpp
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/ComEnumDemo/: CMakeLists.txt  main.cpp
examples/ComEnum_orig_demo/: CMakeLists.txt  main.cpp
examples/ServiceExample/: CMakeLists.txt  ExampleApp.h  service.cpp
examples/comm_enum/: CMakeLists.txt  main.cpp
examples/enumser_demo/: CMakeLists.txt  main.cpp
examples/serial_communication/: CMakeLists.txt  communication.cpp  main.cpp
examples/volumeAPI_CLI/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/ComEnum/: CMakeLists.txt
libs/ComEnum/src/: ComEnum.cpp
libs/CommSupervisor/: CMakeLists.txt
libs/CommSupervisor/src/: supervisor.cpp
libs/SerialPortWrapper/src/: SerialPortWrapper.cpp
libs/ServiceHelper/: CMakeLists.txt
libs/enumser/: CMakeLists.txt
libs/enumser/src/: enumser.cpp
volumemixer/: VolumeAPI.cpp  VolumeAPI.h  main.cpp  volumemixer.vcxproj  volumemixer.vcxproj.filters
(+14 files in other folders)
